Fixed 1 pixel top alignment issue in Safari.

--- a/web/assets/css/common_ui.css
+++ b/web/assets/css/common_ui.css
@@ -855,7 +855,7 @@ h4.tb {
 
 #bigbar .like, #bigbar .follow {
   float: right;
-  line-height: 38px;
+  margin-top: 4px;
 }
 
 #bigbar [class^="icon-"], #bigbar .like [class*=" icon-"] {
@@ -865,8 +865,7 @@ h4.tb {
 
 #bigbar .compact_share {
   float: right;
-  margin-left: 10px;
-  line-height: 38px;
+  margin: 4px 0px 0px 10px;
 }
 
 .compact_share.btn-group {
